improve classes interfaces and coding standards

--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -81,9 +81,10 @@
     "# Initialize\n",
     "import wow.ui as ui\n",
     "import wow.helper as help\n",
+    "import wow.fights\n",
     "\n",
     "from wow.query import Query, Predicate\n",
-    "from wow.log import Record, Encounter\n",
+    "from wow.log import Record, Encounter, EncounterReport\n",
     "\n",
     "# (z, f) = ui.import_file()\n"
    ]
@@ -139,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfd1861c7d654b9d9ce19e80b7612b55",
+       "model_id": "9b63889099084b229024dbcf53d21082",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,86 +159,207 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "<style>\n",
+       "sb { color: steelblue }\n",
+       "o { color: Orange }\n",
+       "g { color: Green }\n",
+       "</style>\n",
+       "\n",
+       "## <sb>\"Remnant of Ner'zhul\" (id: 2432)</sb>\n",
+       "- ENCOUNTER_START (log: 85255)\n",
+       "  - *2022-01-27 22:27:20.478000*  \n",
+       "- 34463 entries in **0:01:46.772000**\n",
+       "- ENCOUNTER_END (log: 119717)\n",
+       "  - *2022-01-27 22:29:07.250000*\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_b2315_ caption {\n",
+       "  font-size: 16px;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "#T_b2315_row3_col0, #T_b2315_row3_col1, #T_b2315_row3_col2, #T_b2315_row4_col0, #T_b2315_row4_col1, #T_b2315_row4_col2, #T_b2315_row5_col0, #T_b2315_row5_col1, #T_b2315_row5_col2 {\n",
+       "  color: blue;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_b2315_\">\n",
+       "  <caption>List of Orb Carriers</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th class=\"col_heading level0 col0\" >TimeStamp</th>\n",
+       "      <th class=\"col_heading level0 col1\" >ID</th>\n",
+       "      <th class=\"col_heading level0 col2\" >Player</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b2315_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_b2315_row0_col0\" class=\"data row0 col0\" >2022-01-27 22:27:46.341000</td>\n",
+       "      <td id=\"T_b2315_row0_col1\" class=\"data row0 col1\" >Creature-0-4216-2450-10260-177117-0000734684</td>\n",
+       "      <td id=\"T_b2315_row0_col2\" class=\"data row0 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b2315_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_b2315_row1_col0\" class=\"data row1 col0\" >2022-01-27 22:27:48.699000</td>\n",
+       "      <td id=\"T_b2315_row1_col1\" class=\"data row1 col1\" >Creature-0-4216-2450-10260-177117-0000734685</td>\n",
+       "      <td id=\"T_b2315_row1_col2\" class=\"data row1 col2\" >\"Spartanovix-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b2315_level0_row2\" class=\"row_heading level0 row2\" >3</th>\n",
+       "      <td id=\"T_b2315_row2_col0\" class=\"data row2 col0\" >2022-01-27 22:28:34.587000</td>\n",
+       "      <td id=\"T_b2315_row2_col1\" class=\"data row2 col1\" >Creature-0-4216-2450-10260-177117-00007346AE</td>\n",
+       "      <td id=\"T_b2315_row2_col2\" class=\"data row2 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b2315_level0_row3\" class=\"row_heading level0 row3\" >2</th>\n",
+       "      <td id=\"T_b2315_row3_col0\" class=\"data row3 col0\" >2022-01-27 22:28:30.916000</td>\n",
+       "      <td id=\"T_b2315_row3_col1\" class=\"data row3 col1\" >Creature-0-4216-2450-10260-177117-00007346B0</td>\n",
+       "      <td id=\"T_b2315_row3_col2\" class=\"data row3 col2\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b2315_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_b2315_row4_col0\" class=\"data row4 col0\" >2022-01-27 22:28:35.563000</td>\n",
+       "      <td id=\"T_b2315_row4_col1\" class=\"data row4 col1\" >Creature-0-4216-2450-10260-177117-00007346B0</td>\n",
+       "      <td id=\"T_b2315_row4_col2\" class=\"data row4 col2\" >\"Dii-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_b2315_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_b2315_row5_col0\" class=\"data row5 col0\" >2022-01-27 22:28:43.512000</td>\n",
+       "      <td id=\"T_b2315_row5_col1\" class=\"data row5 col1\" >Creature-0-4216-2450-10260-177117-00007346B0</td>\n",
+       "      <td id=\"T_b2315_row5_col2\" class=\"data row5 col2\" >\"Spartanovix-Azralon\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x2b62c860e20>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_31ad1_ caption {\n",
+       "  font-size: 16px;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "#T_31ad1_row0_col1, #T_31ad1_row0_col2, #T_31ad1_row1_col1, #T_31ad1_row1_col2, #T_31ad1_row2_col1, #T_31ad1_row2_col2, #T_31ad1_row3_col1, #T_31ad1_row3_col2 {\n",
+       "  color: aqua;\n",
+       "}\n",
+       "#T_31ad1_row0_col3, #T_31ad1_row1_col3, #T_31ad1_row2_col3, #T_31ad1_row3_col3 {\n",
+       "  color: blue;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_31ad1_\">\n",
+       "  <caption>Orb Lifespan Overview</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th class=\"col_heading level0 col0\" >ID</th>\n",
+       "      <th class=\"col_heading level0 col1\" >TimeStamp Spawned</th>\n",
+       "      <th class=\"col_heading level0 col2\" >TimeStamp Disposed</th>\n",
+       "      <th class=\"col_heading level0 col3\" >Time Elapsed</th>\n",
+       "      <th class=\"col_heading level0 col4\" >Player</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_31ad1_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_31ad1_row0_col0\" class=\"data row0 col0\" >Creature-0-4216-2450-10260-177117-0000734684</td>\n",
+       "      <td id=\"T_31ad1_row0_col1\" class=\"data row0 col1\" >2022-01-27 22:27:30.935000</td>\n",
+       "      <td id=\"T_31ad1_row0_col2\" class=\"data row0 col2\" >2022-01-27 22:27:46.341000</td>\n",
+       "      <td id=\"T_31ad1_row0_col3\" class=\"data row0 col3\" >0 days 00:00:15.406000</td>\n",
+       "      <td id=\"T_31ad1_row0_col4\" class=\"data row0 col4\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_31ad1_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_31ad1_row1_col0\" class=\"data row1 col0\" >Creature-0-4216-2450-10260-177117-0000734685</td>\n",
+       "      <td id=\"T_31ad1_row1_col1\" class=\"data row1 col1\" >2022-01-27 22:27:32.369000</td>\n",
+       "      <td id=\"T_31ad1_row1_col2\" class=\"data row1 col2\" >2022-01-27 22:27:48.699000</td>\n",
+       "      <td id=\"T_31ad1_row1_col3\" class=\"data row1 col3\" >0 days 00:00:16.330000</td>\n",
+       "      <td id=\"T_31ad1_row1_col4\" class=\"data row1 col4\" >\"Spartanovix-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_31ad1_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_31ad1_row2_col0\" class=\"data row2 col0\" >Creature-0-4216-2450-10260-177117-00007346AE</td>\n",
+       "      <td id=\"T_31ad1_row2_col1\" class=\"data row2 col1\" >2022-01-27 22:28:13.480000</td>\n",
+       "      <td id=\"T_31ad1_row2_col2\" class=\"data row2 col2\" >2022-01-27 22:28:34.587000</td>\n",
+       "      <td id=\"T_31ad1_row2_col3\" class=\"data row2 col3\" >0 days 00:00:21.107000</td>\n",
+       "      <td id=\"T_31ad1_row2_col4\" class=\"data row2 col4\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_31ad1_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_31ad1_row3_col0\" class=\"data row3 col0\" >Creature-0-4216-2450-10260-177117-00007346B0</td>\n",
+       "      <td id=\"T_31ad1_row3_col1\" class=\"data row3 col1\" >2022-01-27 22:28:14.978000</td>\n",
+       "      <td id=\"T_31ad1_row3_col2\" class=\"data row3 col2\" >2022-01-27 22:28:43.512000</td>\n",
+       "      <td id=\"T_31ad1_row3_col3\" class=\"data row3 col3\" >0 days 00:00:28.534000</td>\n",
+       "      <td id=\"T_31ad1_row3_col4\" class=\"data row3 col4\" >\"Spartanovix-Azralon\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x2b63ea440a0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "e = encounters[encSelect.value]\n",
+    "e.getReport().report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = encounters[encSelect.value]\n",
-    "# Query(e.players).groupby(\n",
+    "# Full Log Report\n",
+    "# NerzhulReport(log).listOrbsDisposed().groupby(\n",
     "#   lambda x: x[1],\n",
-    "#   lambda x: x[0],\n",
-    "# ).list()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Creature-0-4216-2450-10260-177117-0000735A55': ['\"Spartanovix-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735A56': ['\"Djøw-Azralon\"',\n",
-       "  '\"Thilokz-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735A7D': ['\"Djøw-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735A7E': ['\"Thilokz-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735AAB': ['\"Djøw-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735AAD': ['\"Thilokz-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735AD4': ['\"Spartanovix-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735AD6': ['\"Thilokz-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735AD7': ['\"Djøw-Azralon\"'],\n",
-       " 'Creature-0-4216-2450-10260-177117-0000735AF9': ['\"Jathäl-Azralon\"']}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e.actions('SPELL_AURA_APPLIED', '\"Sorrowful Procession\"').groupby(\n",
-    "    lambda x: x[1],\n",
-    "    lambda x: x[2],\n",
-    ").dict()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'\"Helm of Suffering\"': {'SPELL_ABSORBED',\n",
-       "  'SPELL_CAST_START',\n",
-       "  'SPELL_CAST_SUCCESS',\n",
-       "  'SPELL_DAMAGE',\n",
-       "  'SPELL_MISSED'},\n",
-       " '\"Malicious Gauntlet\"': {'SPELL_CAST_SUCCESS'},\n",
-       " '\"Orb of Torment\"': {'SPELL_ABSORBED',\n",
-       "  'SPELL_AURA_APPLIED',\n",
-       "  'SPELL_AURA_REFRESH',\n",
-       "  'SPELL_AURA_REMOVED',\n",
-       "  'SPELL_CAST_START',\n",
-       "  'SPELL_CAST_SUCCESS',\n",
-       "  'SPELL_PERIODIC_DAMAGE',\n",
-       "  'SPELL_PERIODIC_MISSED'},\n",
-       " '\"Soulrender Dormazain\"': {'SPELL_AURA_APPLIED'}}"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e.hostile_action.groupby(\n",
-    "    lambda x: x[0],\n",
-    "    lambda x: x[1],\n",
-    "    set\n",
-    ").dict()\n"
+    "#   lambda x: x[2],\n",
+    "#   lambda x: len(list(x))\n",
+    "# ).dict()\n",
+    "# r.listEncounters()\n",
+    "\n",
+    "# Combined Logs\n",
+    "# r = EncounterReport(encounters)\n",
+    "# r.listEncounters()\n"
    ]
   },
   {
@@ -255,71 +377,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "\n",
+       "<style>\n",
+       "sb { color: steelblue }\n",
+       "o { color: Orange }\n",
+       "g { color: Green }\n",
+       "</style>\n",
+       "\n",
+       "## <sb>\"Remnant of Ner'zhul\" (id: 2432)</sb>\n",
+       "- ENCOUNTER_START (log: 85255)\n",
+       "  - *2022-01-27 22:27:20.478000*  \n",
+       "- 34463 entries in **0:01:46.772000**\n",
+       "- ENCOUNTER_END (log: 119717)\n",
+       "  - *2022-01-27 22:29:07.250000*\n"
+      ],
       "text/plain": [
-       "1/27 23:55:33.523: ENCOUNTER_END entry: 1050994\n",
-       "ENCOUNTER_END,2432,\"Remnant of Ner'zhul\",16,20,0,219706"
+       "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e.end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
-       "[('355790', '\"Eternal Torment\"', '\"Orb of Torment\"', 'SPELL_CAST_SUCCESS'),\n",
-       " ('355790', '\"Eternal Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_REMOVED'),\n",
-       " ('355790', '\"Eternal Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_APPLIED'),\n",
-       " ('350694', '\"Grasp of Malice\"', '\"Malicious Gauntlet\"', 'SPELL_CAST_SUCCESS'),\n",
-       " ('108446', '\"Soul Link\"', '\"Orb of Torment\"', 'SPELL_ABSORBED'),\n",
-       " ('357812', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_MISSED'),\n",
-       " ('349891', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_CAST_SUCCESS'),\n",
-       " ('349891', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_CAST_START'),\n",
-       " ('357812', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_ABSORBED'),\n",
-       " ('357812', '\"Suffering\"', '\"Helm of Suffering\"', 'SPELL_DAMAGE'),\n",
-       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_PERIODIC_MISSED'),\n",
-       " ('350071', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_CAST_START'),\n",
-       " ('350071', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_CAST_SUCCESS'),\n",
-       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_REFRESH'),\n",
-       " ('352158', '\"Torment\"', '\"Soulrender Dormazain\"', 'SPELL_AURA_APPLIED'),\n",
-       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_REMOVED'),\n",
-       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_ABSORBED'),\n",
-       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_AURA_APPLIED'),\n",
-       " ('350073', '\"Torment\"', '\"Orb of Torment\"', 'SPELL_PERIODIC_DAMAGE')]"
+       "None"
       ]
      },
-     "execution_count": 36,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
-   "source": [
-    "e.q.filter(\n",
-    "    Predicate.isCreatureAction()\n",
-    ").filter(\n",
-    "    Predicate.isActorHostile()\n",
-    ").map(\n",
-    "    ( Predicate.getActionId(), Predicate.getAction(), Predicate.getActor(), Predicate.getEvent())\n",
-    ").qset(\n",
-    ").sort(\n",
-    "    lambda x: x[1]\n",
-    ").list()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
