--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -160,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -173,11 +182,11 @@
        "g { color: Green }\n",
        "</style>\n",
        "\n",
-       "## <sb>Mythic \"The Tarragrue\" Wipe (id: 2423)</sb>\n",
-       "- 97966 - 2/1 22:30:09.892: ENCOUNTER_START,2423,\"The Tarragrue\",16,20,2450\n",
+       "## <sb>Mythic \"Remnant of Ner'zhul\" Wipe (id: 2432)</sb>\n",
+       "- 964752 - 2/1 23:55:40.638: ENCOUNTER_START,2432,\"Remnant of Ner'zhul\",16,20,2450\n",
        "\n",
-       "- 114276 entries in **0:06:55.079000** / 0:06:55.149000\n",
-       "- 212241 - 2/1 22:37:05.041: ENCOUNTER_END,2423,\"The Tarragrue\",16,20,0,415079\n",
+       "- 69764 entries in **0:03:21.943000** / 0:03:22.216000\n",
+       "- 1034515 - 2/1 23:59:02.854: ENCOUNTER_END,2432,\"Remnant of Ner'zhul\",16,20,0,201943\n",
        "\n"
       ],
       "text/plain": [
@@ -191,6 +200,235 @@
      "data": {
       "text/plain": [
        "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_fe82a_ caption {\n",
+       "  font-size: 16px;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "#T_fe82a_row0_col0, #T_fe82a_row0_col1, #T_fe82a_row0_col2, #T_fe82a_row1_col0, #T_fe82a_row1_col1, #T_fe82a_row1_col2, #T_fe82a_row3_col0, #T_fe82a_row3_col1, #T_fe82a_row3_col2, #T_fe82a_row4_col0, #T_fe82a_row4_col1, #T_fe82a_row4_col2, #T_fe82a_row5_col0, #T_fe82a_row5_col1, #T_fe82a_row5_col2, #T_fe82a_row10_col0, #T_fe82a_row10_col1, #T_fe82a_row10_col2, #T_fe82a_row11_col0, #T_fe82a_row11_col1, #T_fe82a_row11_col2, #T_fe82a_row12_col0, #T_fe82a_row12_col1, #T_fe82a_row12_col2, #T_fe82a_row13_col0, #T_fe82a_row13_col1, #T_fe82a_row13_col2 {\n",
+       "  color: yellow;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_fe82a_\">\n",
+       "  <caption>List of Orb Carriers</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th class=\"col_heading level0 col0\" >TimeStamp</th>\n",
+       "      <th class=\"col_heading level0 col1\" >ID</th>\n",
+       "      <th class=\"col_heading level0 col2\" >Player</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_fe82a_row0_col0\" class=\"data row0 col0\" >2022-02-01 23:56:07.554000</td>\n",
+       "      <td id=\"T_fe82a_row0_col1\" class=\"data row0 col1\" >Creature-0-3887-2450-10650-177117-000079F2B6</td>\n",
+       "      <td id=\"T_fe82a_row0_col2\" class=\"data row0 col2\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row1\" class=\"row_heading level0 row1\" >2</th>\n",
+       "      <td id=\"T_fe82a_row1_col0\" class=\"data row1 col0\" >2022-02-01 23:56:12.344000</td>\n",
+       "      <td id=\"T_fe82a_row1_col1\" class=\"data row1 col1\" >Creature-0-3887-2450-10650-177117-000079F2B6</td>\n",
+       "      <td id=\"T_fe82a_row1_col2\" class=\"data row1 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row2\" class=\"row_heading level0 row2\" >1</th>\n",
+       "      <td id=\"T_fe82a_row2_col0\" class=\"data row2 col0\" >2022-02-01 23:56:08.417000</td>\n",
+       "      <td id=\"T_fe82a_row2_col1\" class=\"data row2 col1\" >Creature-0-3887-2450-10650-177117-000079F2B7</td>\n",
+       "      <td id=\"T_fe82a_row2_col2\" class=\"data row2 col2\" >\"Dii-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row3\" class=\"row_heading level0 row3\" >4</th>\n",
+       "      <td id=\"T_fe82a_row3_col0\" class=\"data row3 col0\" >2022-02-01 23:56:56.558000</td>\n",
+       "      <td id=\"T_fe82a_row3_col1\" class=\"data row3 col1\" >Creature-0-3887-2450-10650-177117-000079F2DC</td>\n",
+       "      <td id=\"T_fe82a_row3_col2\" class=\"data row3 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row4\" class=\"row_heading level0 row4\" >5</th>\n",
+       "      <td id=\"T_fe82a_row4_col0\" class=\"data row4 col0\" >2022-02-01 23:57:03.899000</td>\n",
+       "      <td id=\"T_fe82a_row4_col1\" class=\"data row4 col1\" >Creature-0-3887-2450-10650-177117-000079F2DC</td>\n",
+       "      <td id=\"T_fe82a_row4_col2\" class=\"data row4 col2\" >\"Bablowboy-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row5\" class=\"row_heading level0 row5\" >6</th>\n",
+       "      <td id=\"T_fe82a_row5_col0\" class=\"data row5 col0\" >2022-02-01 23:57:07.358000</td>\n",
+       "      <td id=\"T_fe82a_row5_col1\" class=\"data row5 col1\" >Creature-0-3887-2450-10650-177117-000079F2DC</td>\n",
+       "      <td id=\"T_fe82a_row5_col2\" class=\"data row5 col2\" >\"Dii-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row6\" class=\"row_heading level0 row6\" >3</th>\n",
+       "      <td id=\"T_fe82a_row6_col0\" class=\"data row6 col0\" >2022-02-01 23:56:52.516000</td>\n",
+       "      <td id=\"T_fe82a_row6_col1\" class=\"data row6 col1\" >Creature-0-3887-2450-10650-177117-000079F2DE</td>\n",
+       "      <td id=\"T_fe82a_row6_col2\" class=\"data row6 col2\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row7\" class=\"row_heading level0 row7\" >8</th>\n",
+       "      <td id=\"T_fe82a_row7_col0\" class=\"data row7 col0\" >2022-02-01 23:57:39.526000</td>\n",
+       "      <td id=\"T_fe82a_row7_col1\" class=\"data row7 col1\" >Creature-0-3887-2450-10650-177117-000079F309</td>\n",
+       "      <td id=\"T_fe82a_row7_col2\" class=\"data row7 col2\" >\"Maulfurionx-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row8\" class=\"row_heading level0 row8\" >7</th>\n",
+       "      <td id=\"T_fe82a_row8_col0\" class=\"data row8 col0\" >2022-02-01 23:57:35.681000</td>\n",
+       "      <td id=\"T_fe82a_row8_col1\" class=\"data row8 col1\" >Creature-0-3887-2450-10650-177117-000079F30B</td>\n",
+       "      <td id=\"T_fe82a_row8_col2\" class=\"data row8 col2\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row9\" class=\"row_heading level0 row9\" >10</th>\n",
+       "      <td id=\"T_fe82a_row9_col0\" class=\"data row9 col0\" >2022-02-01 23:58:17.634000</td>\n",
+       "      <td id=\"T_fe82a_row9_col1\" class=\"data row9 col1\" >Creature-0-3887-2450-10650-177117-000079F338</td>\n",
+       "      <td id=\"T_fe82a_row9_col2\" class=\"data row9 col2\" >\"Pandamän-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row10\" class=\"row_heading level0 row10\" >9</th>\n",
+       "      <td id=\"T_fe82a_row10_col0\" class=\"data row10 col0\" >2022-02-01 23:58:16.127000</td>\n",
+       "      <td id=\"T_fe82a_row10_col1\" class=\"data row10 col1\" >Creature-0-3887-2450-10650-177117-000079F33A</td>\n",
+       "      <td id=\"T_fe82a_row10_col2\" class=\"data row10 col2\" >\"Bablowboy-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row11\" class=\"row_heading level0 row11\" >11</th>\n",
+       "      <td id=\"T_fe82a_row11_col0\" class=\"data row11 col0\" >2022-02-01 23:58:21.539000</td>\n",
+       "      <td id=\"T_fe82a_row11_col1\" class=\"data row11 col1\" >Creature-0-3887-2450-10650-177117-000079F33A</td>\n",
+       "      <td id=\"T_fe82a_row11_col2\" class=\"data row11 col2\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row12\" class=\"row_heading level0 row12\" >12</th>\n",
+       "      <td id=\"T_fe82a_row12_col0\" class=\"data row12 col0\" >2022-02-01 23:58:23.665000</td>\n",
+       "      <td id=\"T_fe82a_row12_col1\" class=\"data row12 col1\" >Creature-0-3887-2450-10650-177117-000079F33B</td>\n",
+       "      <td id=\"T_fe82a_row12_col2\" class=\"data row12 col2\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_fe82a_level0_row13\" class=\"row_heading level0 row13\" >13</th>\n",
+       "      <td id=\"T_fe82a_row13_col0\" class=\"data row13 col0\" >2022-02-01 23:58:42.196000</td>\n",
+       "      <td id=\"T_fe82a_row13_col1\" class=\"data row13 col1\" >Creature-0-3887-2450-10650-177117-000079F33B</td>\n",
+       "      <td id=\"T_fe82a_row13_col2\" class=\"data row13 col2\" >\"Zairoz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1fe418977f0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_7d1b0_ caption {\n",
+       "  font-size: 16px;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "#T_7d1b0_row0_col1, #T_7d1b0_row0_col2, #T_7d1b0_row1_col1, #T_7d1b0_row1_col2, #T_7d1b0_row2_col1, #T_7d1b0_row2_col2, #T_7d1b0_row3_col1, #T_7d1b0_row3_col2, #T_7d1b0_row4_col1, #T_7d1b0_row4_col2, #T_7d1b0_row5_col1, #T_7d1b0_row5_col2, #T_7d1b0_row6_col1, #T_7d1b0_row6_col2, #T_7d1b0_row7_col1, #T_7d1b0_row7_col2, #T_7d1b0_row8_col1, #T_7d1b0_row8_col2 {\n",
+       "  color: aqua;\n",
+       "}\n",
+       "#T_7d1b0_row0_col3, #T_7d1b0_row1_col3, #T_7d1b0_row2_col3, #T_7d1b0_row3_col3, #T_7d1b0_row4_col3, #T_7d1b0_row5_col3, #T_7d1b0_row6_col3, #T_7d1b0_row7_col3, #T_7d1b0_row8_col3 {\n",
+       "  color: yellow;\n",
+       "  font-weight: bold;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_7d1b0_\">\n",
+       "  <caption>Orb Lifespan Overview</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th class=\"col_heading level0 col0\" >ID</th>\n",
+       "      <th class=\"col_heading level0 col1\" >TimeStamp Spawned</th>\n",
+       "      <th class=\"col_heading level0 col2\" >TimeStamp Disposed</th>\n",
+       "      <th class=\"col_heading level0 col3\" >Time Elapsed</th>\n",
+       "      <th class=\"col_heading level0 col4\" >Player</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_7d1b0_row0_col0\" class=\"data row0 col0\" >Creature-0-3887-2450-10650-177117-000079F2B6</td>\n",
+       "      <td id=\"T_7d1b0_row0_col1\" class=\"data row0 col1\" >2022-02-01 23:55:51.555000</td>\n",
+       "      <td id=\"T_7d1b0_row0_col2\" class=\"data row0 col2\" >2022-02-01 23:56:12.344000</td>\n",
+       "      <td id=\"T_7d1b0_row0_col3\" class=\"data row0 col3\" >0 days 00:00:20.789000</td>\n",
+       "      <td id=\"T_7d1b0_row0_col4\" class=\"data row0 col4\" >\"Thilokz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_7d1b0_row1_col0\" class=\"data row1 col0\" >Creature-0-3887-2450-10650-177117-000079F2B7</td>\n",
+       "      <td id=\"T_7d1b0_row1_col1\" class=\"data row1 col1\" >2022-02-01 23:55:53.074000</td>\n",
+       "      <td id=\"T_7d1b0_row1_col2\" class=\"data row1 col2\" >2022-02-01 23:56:08.417000</td>\n",
+       "      <td id=\"T_7d1b0_row1_col3\" class=\"data row1 col3\" >0 days 00:00:15.343000</td>\n",
+       "      <td id=\"T_7d1b0_row1_col4\" class=\"data row1 col4\" >\"Dii-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_7d1b0_row2_col0\" class=\"data row2 col0\" >Creature-0-3887-2450-10650-177117-000079F2DC</td>\n",
+       "      <td id=\"T_7d1b0_row2_col1\" class=\"data row2 col1\" >2022-02-01 23:56:30.027000</td>\n",
+       "      <td id=\"T_7d1b0_row2_col2\" class=\"data row2 col2\" >2022-02-01 23:57:07.358000</td>\n",
+       "      <td id=\"T_7d1b0_row2_col3\" class=\"data row2 col3\" >0 days 00:00:37.331000</td>\n",
+       "      <td id=\"T_7d1b0_row2_col4\" class=\"data row2 col4\" >\"Dii-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_7d1b0_row3_col0\" class=\"data row3 col0\" >Creature-0-3887-2450-10650-177117-000079F2DE</td>\n",
+       "      <td id=\"T_7d1b0_row3_col1\" class=\"data row3 col1\" >2022-02-01 23:56:31.542000</td>\n",
+       "      <td id=\"T_7d1b0_row3_col2\" class=\"data row3 col2\" >2022-02-01 23:56:52.516000</td>\n",
+       "      <td id=\"T_7d1b0_row3_col3\" class=\"data row3 col3\" >0 days 00:00:20.974000</td>\n",
+       "      <td id=\"T_7d1b0_row3_col4\" class=\"data row3 col4\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_7d1b0_row4_col0\" class=\"data row4 col0\" >Creature-0-3887-2450-10650-177117-000079F309</td>\n",
+       "      <td id=\"T_7d1b0_row4_col1\" class=\"data row4 col1\" >2022-02-01 23:57:14.934000</td>\n",
+       "      <td id=\"T_7d1b0_row4_col2\" class=\"data row4 col2\" >2022-02-01 23:57:39.526000</td>\n",
+       "      <td id=\"T_7d1b0_row4_col3\" class=\"data row4 col3\" >0 days 00:00:24.592000</td>\n",
+       "      <td id=\"T_7d1b0_row4_col4\" class=\"data row4 col4\" >\"Maulfurionx-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_7d1b0_row5_col0\" class=\"data row5 col0\" >Creature-0-3887-2450-10650-177117-000079F30B</td>\n",
+       "      <td id=\"T_7d1b0_row5_col1\" class=\"data row5 col1\" >2022-02-01 23:57:16.509000</td>\n",
+       "      <td id=\"T_7d1b0_row5_col2\" class=\"data row5 col2\" >2022-02-01 23:57:35.681000</td>\n",
+       "      <td id=\"T_7d1b0_row5_col3\" class=\"data row5 col3\" >0 days 00:00:19.172000</td>\n",
+       "      <td id=\"T_7d1b0_row5_col4\" class=\"data row5 col4\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_7d1b0_row6_col0\" class=\"data row6 col0\" >Creature-0-3887-2450-10650-177117-000079F338</td>\n",
+       "      <td id=\"T_7d1b0_row6_col1\" class=\"data row6 col1\" >2022-02-01 23:58:02.041000</td>\n",
+       "      <td id=\"T_7d1b0_row6_col2\" class=\"data row6 col2\" >2022-02-01 23:58:17.634000</td>\n",
+       "      <td id=\"T_7d1b0_row6_col3\" class=\"data row6 col3\" >0 days 00:00:15.593000</td>\n",
+       "      <td id=\"T_7d1b0_row6_col4\" class=\"data row6 col4\" >\"Pandamän-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_7d1b0_row7_col0\" class=\"data row7 col0\" >Creature-0-3887-2450-10650-177117-000079F33A</td>\n",
+       "      <td id=\"T_7d1b0_row7_col1\" class=\"data row7 col1\" >2022-02-01 23:58:03.493000</td>\n",
+       "      <td id=\"T_7d1b0_row7_col2\" class=\"data row7 col2\" >2022-02-01 23:58:21.539000</td>\n",
+       "      <td id=\"T_7d1b0_row7_col3\" class=\"data row7 col3\" >0 days 00:00:18.046000</td>\n",
+       "      <td id=\"T_7d1b0_row7_col4\" class=\"data row7 col4\" >\"Djøw-Azralon\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_7d1b0_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_7d1b0_row8_col0\" class=\"data row8 col0\" >Creature-0-3887-2450-10650-177117-000079F33B</td>\n",
+       "      <td id=\"T_7d1b0_row8_col1\" class=\"data row8 col1\" >2022-02-01 23:58:05.067000</td>\n",
+       "      <td id=\"T_7d1b0_row8_col2\" class=\"data row8 col2\" >2022-02-01 23:58:42.196000</td>\n",
+       "      <td id=\"T_7d1b0_row8_col3\" class=\"data row8 col3\" >0 days 00:00:37.129000</td>\n",
+       "      <td id=\"T_7d1b0_row8_col4\" class=\"data row8 col4\" >\"Zairoz-Azralon\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1fe41897820>"
       ]
      },
      "metadata": {},
@@ -233,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
