--- a/ex_kaggle_download.ipynb
+++ b/ex_kaggle_download.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "93096123-9c3d-4a41-b2a8-b229083932d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "\n",
+    "import ipywidgets as wdg\n",
     "from functools import partial\n",
     "from kaggle import KaggleApi\n",
     "from zipfile import ZipFile\n",
-    "from ipywidgets import Button"
+    "from IPython.display import display"
    ]
   },
   {
@@ -27,50 +27,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "2f361a72-2f33-4f7e-be77-bc37023088d9",
+   "cell_type": "markdown",
+   "id": "7bc0d724",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def proto_download(kaggleDB, kaggleCSV, kaggleDir, btn):\n",
-    "    kaggleZip = kaggleCSV + '.zip'\n",
-    "    kaggleCSVPath = os.path.join(kaggleDB, kaggleCSV)\n",
-    "    \n",
-    "    if not os.path.exists(kaggleCSVPath):\n",
-    "        print('Downloading ...')\n",
-    "        kaggleApi = KaggleApi()\n",
-    "        kaggleApi.authenticate()\n",
-    "        kaggleApi.dataset_download_file(kaggleDB, kaggleCSV)\n",
-    "        \n",
-    "        print('Done. Extracting ...')\n",
-    "\n",
-    "        zf = ZipFile(kaggleZip)\n",
-    "        zf.extractall(kaggleDB) #save files in selected folder\n",
-    "        zf.close()\n",
-    "        \n",
-    "        print('Done.')\n",
-    "    else:\n",
-    "        print('File Already Exists.')\n",
-    "    \n",
-    "    btn.disabled = True"
+    "Define UI Elements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "1664829f-ee9c-4337-8000-a570d15a00af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txtDataset = wdg.Text()\n",
+    "txtDataset.value = 'imdevskp/corona-virus-report'\n",
+    "\n",
+    "txtFile = wdg.Text()\n",
+    "txtFile.value = 'covid_19_clean_complete.csv'\n",
+    "\n",
+    "txtDir = wdg.Text()\n",
+    "txtDir.value = 'data'\n",
+    "\n",
+    "btnDownload = wdg.Button(\n",
+    "    description='Download Set',\n",
+    "    disabled=False,\n",
+    "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Click to download the set from Kaggle.',\n",
+    "    icon='download' # (FontAwesome names without the `fa-` prefix)\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d25e388d",
+   "metadata": {},
+   "source": [
+    "Define Download Function\n",
+    "\n",
+    "**This function considers you have the kaggle api key already set.**\n",
+    "\n",
+    "https://www.kaggle.com/docs/api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "932a67a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download(btn):\n",
+    "    kaggleDataset = txtDataset.value\n",
+    "    kaggleFile = txtFile.value\n",
+    "    kaggleDir = txtDir.value\n",
+    "\n",
+    "    kaggleZip = kaggleFile + '.zip'\n",
+    "    kaggleCSVPath = os.path.join(kaggleDir, kaggleFile)\n",
+    "\n",
+    "    if not os.path.exists(kaggleCSVPath):\n",
+    "        print('Downloading ...')\n",
+    "        kaggleApi = KaggleApi()\n",
+    "        kaggleApi.authenticate()\n",
+    "        kaggleApi.dataset_download_file(kaggleDataset, kaggleFile)\n",
+    "\n",
+    "        print('Done. Extracting ...')\n",
+    "\n",
+    "        with ZipFile(kaggleZip) as zf:\n",
+    "            zf.extractall(kaggleDir)  # save files in selected folder\n",
+    "\n",
+    "        print('Done.')\n",
+    "    else:\n",
+    "        print('File Already Exists.')\n",
+    "\n",
+    "    btn.disabled = True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41c56447",
+   "metadata": {},
+   "source": [
+    "Now we put Everything Together!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "102eb77d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d909b1ce0c7d44e88db2e0cbfb5c5b9d",
+       "model_id": "4c2b57e8e6db4e92998a6d7332902f46",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Button(button_style='info', description='Download Set', icon='download', style=ButtonStyle(), tooltip='Click t…"
+       "VBox(children=(HBox(children=(VBox(children=(Label(value='Account:'), Text(value='imdevskp/corona-virus-report…"
       ]
      },
      "metadata": {},
@@ -78,70 +134,15 @@
     }
    ],
    "source": [
-    "btnDownload = Button(\n",
-    "    description='Download Set',\n",
-    "    disabled=False,\n",
-    "    button_style='info', # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='Click to download the set from Kaggle.',\n",
-    "    icon='download' # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
-    "\n",
-    "download = partial(\n",
-    "    proto_download, \n",
-    "    'imdevskp/corona-virus-report', \n",
-    "    'covid_19_clean_complete.csv', \n",
-    "    '../data'\n",
-    ")\n",
+    "hbox = wdg.HBox([\n",
+    "    wdg.VBox([wdg.Label('Account:'), txtDataset]),\n",
+    "    wdg.VBox([wdg.Label('File:'), txtFile]),\n",
+    "    wdg.VBox([wdg.Label('Directory:'), txtDir])\n",
+    "])\n",
     "\n",
     "btnDownload.on_click(download)\n",
-    "display(btnDownload)"
+    "display(wdg.VBox([hbox, btnDownload]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "474bfc61-6a5b-40ba-911d-c9b142183e63",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ef273408-9b4b-4434-afba-eec93260db75",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\PICHAU\\\\Desktop\\\\Arquivos\\\\examples-datascience'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "215b6d18-1906-43b2-8aad-125597964d18",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
