update dslib design choices

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datatable as dt\n",
-    "from datatable import f"
+    "\n",
+    "from datatable import f\n",
+    "from dslib.imports import datatable_from_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,17 +56,17 @@
        "</div>\n"
       ],
       "text/plain": [
-       "<Frame#232548c1ed0 49068x10>"
+       "<Frame#168a694b990 49068x10>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw = dt.fread('data/covid_19_clean_complete.csv')\n",
-    "raw"
+    "raw = datatable_from_csv('data/covid_19_clean_complete.csv')\n",
+    "raw\n"
    ]
   },
   {
