--- a/restaurant_reviews.ipynb
+++ b/restaurant_reviews.ipynb
@@ -75,7 +75,40 @@
    "metadata": {
     "id": "tPfSFWfC-lMg"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type='text/css'>\n",
+       ".datatable table.frame { margin-bottom: 0; }\n",
+       ".datatable table.frame thead { border-bottom: none; }\n",
+       ".datatable table.frame tr.coltypes td {  color: #FFFFFF;  line-height: 6px;  padding: 0 0.5em;}\n",
+       ".datatable .bool    { background: #DDDD99; }\n",
+       ".datatable .object  { background: #565656; }\n",
+       ".datatable .int     { background: #5D9E5D; }\n",
+       ".datatable .float   { background: #4040CC; }\n",
+       ".datatable .str     { background: #CC4040; }\n",
+       ".datatable .time    { background: #40CC40; }\n",
+       ".datatable .row_index {  background: var(--jp-border-color3);  border-right: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  font-size: 9px;}\n",
+       ".datatable .frame tbody td { text-align: left; }\n",
+       ".datatable .frame tr.coltypes .row_index {  background: var(--jp-border-color0);}\n",
+       ".datatable th:nth-child(2) { padding-left: 12px; }\n",
+       ".datatable .hellipsis {  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .vellipsis {  background: var(--jp-layout-color0);  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .na {  color: var(--jp-cell-editor-border-color);  font-size: 80%;}\n",
+       ".datatable .sp {  opacity: 0.25;}\n",
+       ".datatable .footer { font-size: 9px; }\n",
+       ".datatable .frame_dimensions {  background: var(--jp-border-color3);  border-top: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  display: inline-block;  opacity: 0.6;  padding: 1px 10px 1px 5px;}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -85,6 +118,8 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
+    "import dslib as ds\n",
+    "\n",
     "from keras.layers import Dense\n",
     "from keras.models import Sequential\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -110,10 +145,8 @@
    },
    "outputs": [],
    "source": [
-    "from dslib.analysis import Analysis\n",
-    "\n",
-    "lab, raw = Analysis.from_csv('data/Restaurant_Reviews.csv')\n",
-    "corpus = lab.columns('Review').to_list()"
+    "raw = ds.imports.pandas_from_csv('data/Restaurant_Reviews.csv')\n",
+    "corpus = raw['Review'].to_list()\n"
    ]
   },
   {
@@ -135,8 +168,8 @@
    "source": [
     "# Train: 60%; Valid: 20%; Test: 20%\n",
     "xTV, testCorpus, yTV, testTarget = train_test_split(\n",
-    "    lab.columns('Review'), \n",
-    "    lab.columns('Liked'), \n",
+    "    raw['Review'], \n",
+    "    raw['Liked'], \n",
     "    test_size=0.2, random_state=0\n",
     ")\n",
     "\n",
@@ -166,10 +199,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'dslib.nlp' has no attribute 'extract_vocab'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14484/2877962778.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Find \"meaningful\" words in the corpus\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mvocabs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_vocab\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrainCorpus\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'dslib.nlp' has no attribute 'extract_vocab'"
+     ]
+    }
+   ],
    "source": [
     "# Find \"meaningful\" words in the corpus\n",
-    "vocabs = lab.nlp.extract_vocab(trainCorpus)"
+    "vocabs = ds.nlp.extract_vocab(trainCorpus)"
    ]
   },
   {
