--- a/restaurant_reviews.ipynb
+++ b/restaurant_reviews.ipynb
@@ -118,14 +118,16 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
-    "import dslib as ds\n",
     "\n",
     "from keras.layers import Dense\n",
     "from keras.models import Sequential\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neural_network import MLPClassifier, MLPRegressor\n",
     "from sklearn.tree import DecisionTreeClassifier, export_graphviz, export_text, plot_tree\n",
-    "from tensorflow.keras.optimizers import SGD"
+    "from tensorflow.keras.optimizers import SGD\n",
+    "\n",
+    "from dslib import pandas_from_csv\n",
+    "from dslib.nlp import extract"
    ]
   },
   {
@@ -145,7 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "raw = ds.imports.pandas_from_csv('data/Restaurant_Reviews.csv')\n",
+    "raw = pandas_from_csv('data/Restaurant_Reviews.csv')\n",
     "corpus = raw['Review'].to_list()\n"
    ]
   },
@@ -214,7 +216,7 @@
    ],
    "source": [
     "# Find \"meaningful\" words in the corpus\n",
-    "vocabs = ds.nlp.extract_vocab(trainCorpus)"
+    "vocabs = extract_vocab(trainCorpus)"
    ]
   },
   {
