--- a/wow_log.ipynb
+++ b/wow_log.ipynb
@@ -94,9 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6d449cb27904bc5a4dec5e328853b33",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Dropdown(description='Encounter:', options=(('1 \"Sylvanas Windrunner\" 9:29', 0),…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Define Encounter being Analysed\n",
     "encSelect = ui.pick_encounter(log.encounters)"
