add colab links to notebooks

--- a/data_forest_fires.ipynb
+++ b/data_forest_fires.ipynb
@@ -5,15 +5,11 @@
    "id": "cd4c2f5d",
    "metadata": {},
    "source": [
-    "# Forest Fires in Portugal Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9690f1f",
-   "metadata": {},
-   "source": [
-    "This notebook explores the Forest Fires dataset from UCI (https://archive.ics.uci.edu/ml/datasets/forest+fires).\n",
+    "# Forest Fires in Portugal Analysis\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mjsmagalhaes/examples-datascience/blob/main/data_forest_fires.ipynb)\n",
+    "\n",
+    "This notebook explores the [Forest Fires dataset](https://archive.ics.uci.edu/ml/datasets/forest+fires) from UCI .\n",
     "\n",
     "For now it only contains an unfinished exploratory data analysis of the dataset.\n",
     "\n",
