--- a/course_ibm_data_analysis.ipynb
+++ b/course_ibm_data_analysis.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Data Analysis with Python\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mjsmagalhaes/examples-datascience/blob/main/course_ibm_data_analysis.ipynb)\n",
+    "\n",
     "Created as part of the corse *Data Analysis with Python* from IBM @ Coursera."
    ]
   },
