--- a/data_wow_log.ipynb
+++ b/data_wow_log.ipynb
@@ -1,20 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# World of Warcraft Log Toy\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mjsmagalhaes/examples-datascience/blob/main/data_wow_log.ipynb)\n",
     "\n",
     "This notebook toys with data generated from World of Warcraft (WoW) logs.\n",
     "\n",
@@ -37,6 +29,16 @@
     "\n",
     "- **fights**\n",
     "  - contains scripts to analyze each fight (only nerzhul for now)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
