--- a/example_kaggle_download.ipynb
+++ b/example_kaggle_download.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d73a456d-0b1e-4751-9821-97a0fc4aa124",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Example: Download Kaggle Dataset\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mjsmagalhaes/examples-datascience/blob/main/example_kaggle_download.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "93096123-9c3d-4a41-b2a8-b229083932d2",
@@ -13,17 +26,6 @@
     "from kaggle import KaggleApi\n",
     "from zipfile import ZipFile\n",
     "from IPython.display import display"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d73a456d-0b1e-4751-9821-97a0fc4aa124",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "# Kaggle: Download Dataset"
    ]
   },
   {
