add commands to run on google colab

--- a/example_dslib_plots.ipynb
+++ b/example_dslib_plots.ipynb
@@ -16,7 +16,12 @@
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "\n",
+    "# Colab\n",
+    "# !git clone https://github.com/mjsmagalhaes/examples-datascience.git repo\n",
+    "# %cd repo\n",
+    "# %pip install -r requirements.txt"
    ]
   },
   {
