--- a/example_kaggle_download.ipynb
+++ b/example_kaggle_download.ipynb
@@ -15,6 +15,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "52a75d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Colab\n",
+    "# !git clone https://github.com/mjsmagalhaes/examples-datascience.git repo\n",
+    "# %cd repo\n",
+    "# %pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "93096123-9c3d-4a41-b2a8-b229083932d2",
    "metadata": {},
