--- a/example_dash.ipynb
+++ b/example_dash.ipynb
@@ -11,6 +11,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Colab\n",
+    "# !git clone https://github.com/mjsmagalhaes/examples-datascience.git repo\n",
+    "# %cd repo\n",
+    "# %pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
