--- a/example_dash.ipynb
+++ b/example_dash.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -26,19 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from dslib.plots import plot\n",
     "import dash_bootstrap_components as dbc\n",
+    "import plotly.express as px\n",
     "\n",
     "from jupyter_dash import JupyterDash\n",
-    "from dash import html, dcc, Input, Output"
+    "from dash import html, dcc, Input, Output\n",
+    "\n",
+    "data = px.data.iris()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,21 +63,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "app.layout = dbc.Container([\n",
-    "  html.H1('Teste!'),\n",
-    "  html.H1('Teste!!'),\n",
-    "])\n"
+    "  html.H1('Interactive Histogram'),\n",
+    "  html.H5('Select Column:'),\n",
+    "  dbc.Select(\n",
+    "    id='demo-dropdown',\n",
+    "    options=list(map(lambda v: { 'label': v}, data.columns)), \n",
+    "    value=data.columns[0]\n",
+    "  ),\n",
+    "  html.H5('Altair:'),\n",
+    "  html.Iframe(\n",
+    "    id='plot-iframe',\n",
+    "    style={'width':'100%', 'height': '500px'}\n",
+    "  ),\n",
+    "  html.H5('Plotly:'),\n",
+    "  dcc.Graph(id='plot-area'),\n",
+    "  html.Div(id='dd-output-container')\n",
+    "])\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('plot-area', 'figure'),\n",
+    "    Input('demo-dropdown', 'value')\n",
+    ")\n",
+    "def update_output(value):\n",
+    "  return px.histogram(data, x=value, text_auto=True)\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('plot-iframe', 'srcDoc'),\n",
+    "    Input('demo-dropdown', 'value')\n",
+    ")\n",
+    "def update_output(value):\n",
+    "  return plot().histogram(data, value).to_html()\n",
+    "  # return f'You have selected {value}'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\PICHAU\\AppData\\Roaming\\Python\\Python39\\site-packages\\jupyter_dash\\jupyter_app.py:139: UserWarning:\n",
+      "\n",
+      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -80,7 +132,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cc6a62a130>"
+       "<IPython.lib.display.IFrame at 0x2ecdf1d64c0>"
       ]
      },
      "metadata": {},
