--- a/example_dash.ipynb
+++ b/example_dash.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -30,7 +21,7 @@
     "# Colab\n",
     "# !git clone https://github.com/mjsmagalhaes/examples-datascience.git repo\n",
     "# %cd repo\n",
-    "# %pip install -r requirements.txt"
+    "# %pip install -r requirements.txt -r _requirements/dash.txt"
    ]
   },
   {
