--- a/data_restaurant_reviews.ipynb
+++ b/data_restaurant_reviews.ipynb
@@ -32,7 +32,7 @@
     "# Colab\n",
     "# !git clone https://github.com/mjsmagalhaes/examples-datascience.git repo\n",
     "# %cd repo\n",
-    "# %pip install -r requirements.txt"
+    "# %pip install -r _requirements/dslib.txt"
    ]
   },
   {
