add dsexamples to pip install and move notebooks to their folder

--- a/notebooks/course_ibm_data_analysis.ipynb
+++ b/notebooks/course_ibm_data_analysis.ipynb
@@ -86,11 +86,9 @@
     "from sklearn.preprocessing import StandardScaler, PolynomialFeatures\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "from dslib import pandas_from_csv\n",
-    "from dslib.helpers import replace_csv_header\n",
     "from dslib.missing import list_missing_values\n",
     "from dslib.plots import plot\n",
-    "from dslib.data import cars85\n",
+    "from dsexamples.cars_85 import cars85\n",
     "\n",
     "df = cars85()"
    ]
@@ -128,11 +126,7 @@
    "outputs": [],
    "source": [
     "# remove first column (a duplicated index)\n",
-    "df.drop(\n",
-    "    columns=df.columns[0],\n",
-    "    axis='columns',\n",
-    "    inplace=True\n",
-    ")\n"
+    "df.drop(columns=df.columns[0], axis='columns', inplace=True)\n"
    ]
   },
   {
@@ -198,7 +192,6 @@
     "    print(\"Average of {0}:\".format(column.name), avg_col)\n",
     "    return column.replace(np.nan, avg_col, inplace=True)\n",
     "\n",
-    "\n",
     "replace_nan_by_mean(df[\"normalized-losses\"])\n",
     "replace_nan_by_mean(df[\"stroke\"])\n",
     "replace_nan_by_mean(df[\"bore\"])\n",
@@ -215,16 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Most Frequent Value of num-of-doors: four\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -239,10 +225,10 @@
        "202    four\n",
        "203    four\n",
        "204    four\n",
-       "Name: num-of-doors, Length: 205, dtype: object"
+       "Name: num-of-doors, Length: 201, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,11 +239,10 @@
     "    Replace NAs with the mean of the column over the entire dataset.\n",
     "    \"\"\"\n",
     "    mode_col = column.value_counts().idxmax()\n",
-    "    print(\"Most Frequent Value of {0}:\".format(column.name), mode_col)\n",
+    "    # print(\"Most Frequent Value of {0}:\".format(column.name), mode_col)\n",
     "\n",
     "    column.replace(np.nan, mode_col, inplace=True)\n",
     "    return column\n",
-    "\n",
     "\n",
     "replace_nan_by_frequency(df['num-of-doors'])\n"
    ]
@@ -275,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.dropna(subset=['price'], axis=0, inplace=True)\n"
+    "df.dropna(subset=['price'], axis=0, inplace=True)"
    ]
   },
   {
@@ -336,7 +321,7 @@
     "\n",
     "to_int = [\"normalized-losses\", 'horsepower']\n",
     "df[to_int] = df[to_int].astype(\"int\")\n",
-    "df.info()\n"
+    "df.info()"
    ]
   },
   {
@@ -734,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +728,7 @@
        "<AxesSubplot:xlabel='num-of-doors', ylabel='price'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -761,7 +746,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(y=\"price\", x='num-of-doors', data=df)\n"
+    "sns.boxplot(y=\"price\", x='num-of-doors', data=df)"
    ]
   },
   {
@@ -793,7 +778,7 @@
     }
    ],
    "source": [
-    "sns.jointplot(x='engine-size', y='price', data=df)\n"
+    "sns.jointplot(x='engine-size', y='price', data=df)"
    ]
   },
   {
@@ -896,10 +881,13 @@
     }
    ],
    "source": [
-    "df[['price', 'drive-wheels', 'body-style']].groupby(['drive-wheels', 'body-style'], as_index=False).mean().pivot(\n",
+    "df[['price', 'drive-wheels', 'body-style']].groupby(\n",
+    "    ['drive-wheels', 'body-style'], \n",
+    "    as_index=False\n",
+    ").mean().pivot(\n",
     "    index='drive-wheels',\n",
     "    columns='body-style'\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -976,7 +964,7 @@
     }
    ],
    "source": [
-    "plot().corr_heatmap(df)\n"
+    "plot().corr_heatmap(df)"
    ]
   },
   {
@@ -1009,13 +997,15 @@
    ],
    "source": [
     "plt.figure(figsize=(13, 6))\n",
+    "\n",
     "plt.subplot(1, 2, 1)\n",
     "sns.regplot(x=\"engine-size\", y=\"price\", data=df)\n",
     "plt.title('Regression Plot')\n",
+    "\n",
     "plt.subplot(1, 2, 2)\n",
     "sns.residplot(x=\"engine-size\", y=\"price\", data=df)\n",
     "plt.title('Residual Plot')\n",
-    "# plt.ylim(0,);\n"
+    "# plt.ylim(0,);"
    ]
   },
   {
@@ -1133,7 +1123,7 @@
     }
    ],
    "source": [
-    "df.describe(include=['object'])\n"
+    "df.describe(include=['object'])"
    ]
   },
   {
@@ -1202,69 +1192,7 @@
     "    inplace=True\n",
     ")\n",
     "engine_loc_counts.index.name = 'engine-location'\n",
-    "engine_loc_counts.head(10)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>value_counts</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>engine-location</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>front</th>\n",
-       "      <td>198</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rear</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 value_counts\n",
-       "engine-location              \n",
-       "front                     198\n",
-       "rear                        3"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "engine_loc_counts\n"
+    "engine_loc_counts.head(10)"
    ]
   },
   {
@@ -1399,20 +1327,7 @@
     "    # Console().print(var_list)\n",
     "    return numVars, catVars\n",
     "\n",
-    "\n",
-    "nVar, cVar = list_relevant_vars(df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import statsmodels.api as sm\n",
-    "# from statsmodels.formula.api import ols\n",
-    "# res = ols('price ~ C(drive_wheels)', data=df).fit()\n",
-    "# res.summary()"
+    "nVar, cVar = list_relevant_vars(df)"
    ]
   },
   {
@@ -14173,10 +14088,7 @@
     }
    ],
    "source": [
-    "# plt.figure(figsize=(18, 30));\n",
-    "\n",
     "fig = make_subplots(rows=5, cols=1, shared_xaxes=True, shared_yaxes=True)\n",
-    "# fig = go.Figure()\n",
     "\n",
     "i = 0\n",
     "for f in fold.split(x, y):\n",
@@ -14225,13 +14137,7 @@
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# from tqdm.notebook import trange, tqdm\n",
-    "# from time import sleep\n",
-    "# for i in trange(3, desc='1st loop'):\n",
-    "#     for j in tqdm(range(100), desc='2nd loop'):\n",
-    "#         sleep(0.1)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
