improve dsexamples folder structure

--- a/dsexamples/courses/ibm_bitcoin.ipynb
+++ b/dsexamples/courses/ibm_bitcoin.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "# Colab\n",
+    "# !git clone https://github.com/mjsmagalhaes/examples-datascience.git repo\n",
+    "# %cd repo\n",
+    "# %pip install -r _requirements/dslib.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
